# rsynth

./: Cargo.toml  README.md
cli-synth/: Cargo.toml
cli-synth/src/: audio.rs  main.rs  midi.rs  models.rs
cli-test/: Cargo.toml
cli-test/src/: main.rs
example/: Cargo.toml  build.rs
example/src/: main.rs
midimonitor/: Cargo.toml
midimonitor/src/: main.rs
scale/: Cargo.toml
scale/src/: lib.rs  scl.rs
synth-designer/: Cargo.toml
synth-designer/src/: codegen.rs  input_expr.rs  lib.rs  state_allocator.rs  synth_resource.rs  synth_spec.rs
synth-designer/src/input_expr/: mod.rs
synth-designer/src/modules/: amp_module.rs  bowed_osc.rs  contour_module.rs  control_module.rs  delay_line.rs  filter_12db_module.rs  filter_24db.rs  filter_6db.rs  filter_module.rs  folder_module.rs  input_spec.rs  lp_filter_24db_module.rs  lp_filter_6db.rs  midi_cc_module.rs  midi_mono_module.rs  mod.rs  mono_keys_module.rs  mono_out_module.rs  noise.rs  osc_module.rs  quad.rs  saw_osc.rs  vosim.rs  wavetable.rs  zero.rs
synth-engine/: Cargo.toml
synth-engine/src/: distortion.rs  event.rs  interpolation.rs  lib.rs  sinc_filter.rs  stack_program.rs  state.rs
synth-engine/src/midi/: message.rs  mod.rs
synth-engine/src/modules/: ad_envelope.rs  allpass.rs  amplifier.rs  ar_envelope.rs  bowed.rs  control.rs  delay_line.rs  envelope.rs  filter12db.rs  filter_12db.rs  (+20 more)
synths/: complex_oscillator.ini  complex_wavetable.ini  filter_test.ini  osc_test.ini  simple_bow.ini  simple_bowed.ini  simple_saw.ini  simple_vosim.ini  simple_wavetable.ini  steampipe.ini  waveguide.ini
(+11 files in other folders)
