[package]
name = "cli-synth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
cpal = "0.15.2"
midir = "0.9.1"
synth-engine = { path = "../synth-engine" }
thiserror = "1.0.57"
