[package]
name = "cli-synth"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
cpal = "0.15.2"
midir = "0.9.1"
synth-engine = { path = "../synth-engine", features = ["allocator"] }
synth-designer = { path = "../synth-designer" }
thiserror = "1.0.57"
scale = { path = "../scale" }
